--- a/Tray/src/main/AndroidManifest.xml
+++ b/Tray/src/main/AndroidManifest.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <application>
+        <activity
+            android:name=".Check"
+            android:exported="false" />
+        <activity
+            android:name=".TrayActivity"
+            android:exported="false" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
+    </application>
+
 </manifest>
