Minor changes in UI of UPI Timer BottomSheet

--- a/Tray/src/main/AndroidManifest.xml
+++ b/Tray/src/main/AndroidManifest.xml
@@ -11,25 +11,19 @@
     <application>
         <activity
             android:name=".OTPScreenWebView"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Check"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".TrayActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
-
-        <receiver android:name=".broadcaster.otpFetcher"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
-            </intent-filter>
-        </receiver>
     </application>
-
 </manifest>
