--- a/Tray/src/main/AndroidManifest.xml
+++ b/Tray/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
 
     <application>
         <activity
+            android:name=".TestingPurpose"
+            android:exported="false" />
+        <activity
             android:name=".FailureScreenForTesting"
             android:exported="false" />
         <activity
