functionality of auto inject of OTP added.

--- a/Tray/src/main/AndroidManifest.xml
+++ b/Tray/src/main/AndroidManifest.xml
@@ -39,14 +39,14 @@
             android:name=".TrayActivity"
             android:exported="false" />
 
-        <receiver
-            android:name=".SmsReceiver"
-            android:enabled="true"
+        <receiver android:name=".SmsReceiver"
             android:exported="true">
             <intent-filter>
+                <!-- Specify the intent action -->
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+
 
         <meta-data
             android:name="preloaded_fonts"
