--- a/Sdk/src/main/AndroidManifest.xml
+++ b/Sdk/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
 
-    <application>
+    <application
+        android:theme="@style/AppTheme">
         <activity
             android:name=".TestingPurpose"
             android:exported="false" />
