--- a/Sdk/src/main/AndroidManifest.xml
+++ b/Sdk/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
 
     <application>
@@ -28,9 +29,6 @@
         <activity
             android:name=".Check"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:exported="false" />
-        <activity
-            android:name=".TrayActivity"
             android:exported="false" />
 
         <receiver android:name=".SmsReceiver"
