changed the path and moved all the files of app to app folder and sdk to sdk folder

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity
             android:name=".SuccessScreen"
             android:exported="false" />
+        <activity android:name=".Check"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
